--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
   with gem build and install tasks. In addition, the platform handling has
   been updated for MS Windows.
 * Portions of the gemspec have been moved into the Rakefile gem tasks.
+* Deploying the mingw gem by default for MS Windows now.
 
 == 1.5.2 - 2-Aug-2009
 * Now compatible with Ruby 1.9.x.
