--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+== 1.5.6 - ???
+* Fixed issue for non-gnu platforms where it would use the wrong function
+  prototype because the Ruby core team took it upon themselves to explicitly
+  defined _GNU_SOURCE in config.h in 1.8.7 and later for reasons that baffle me.
+
 == 1.5.5 - 5-Jul-2011
 * Modified lastlog handling, and ignore getpwent_r and getgrent_r, on AIX.
   Thanks go to Rick Ohnemus for the spot and patches.
