--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== 1.5.6 - ???
+== 1.5.6 - 30-Jul-2011
 * Fixed issue for non-gnu platforms where it would use the wrong function
   prototype because the Ruby core team took it upon themselves to explicitly
   defined _GNU_SOURCE in config.h in 1.8.7 and later for reasons that baffle me.
