--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
-== 1.6.1 - ???
-* Added the Admin.add_group_member and Admin.remove_group member methos. These
+== 1.6.1 - 24-Jan-2014
+* Added the Admin.add_group_member and Admin.remove_group member methods. These
   let you add a user to a specific group. Thanks go to Alexey Kolyanov for the
   idea and the code.
 * Modified the Admin.configure_user method so that you don't need to know the
