Added changes for 1.6.4.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+== 1.6.4 - 6-Sep-2015
+* Set VERSION in a single place.
+* Assume Rubygems 2.x for Rakefile tasks.
+* This gem is now signed.
+
 == 1.6.3 - 8-Mar-2014
 * The Admin#get_group method now handles groups with very large numbers
   of members more robustly.
