--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
-== 1.7.1 - 28-Jan-2019
-* Fixed some deprecation warnings in the test suite.
+== 1.7.2 - 28-Jan-2019
 * Fixed the license name, was missing a hyphen.
 * Fixed the homepage in the gemspec.
+
+== 1.7.1 - 19-Mar-2018
+* Fixed deprecation warnings in tests.
+* Added gemspec metadata.
+* Updated cert again, this one should last 10 years.
  
 == 1.7.0 - 21-Feb-2018
 * Changed the license to Apache 2.0.
