--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == Description
-  The sys-admin library is a unified, cross platform replacement for the Etc module.
+The sys-admin library is a unified, cross platform replacement for the Etc module.
    
 == Installation
   gem install sys-admin
@@ -24,35 +24,40 @@
 
 == Admin
 Admin.get_login
-  Returns the user name (only) of the current login.
 
-Admin.get_user(name, options = {})
-Admin.get_user(uid, options = {})
-  Returns a User object based on +name+ or +uid+. The +options+ hash is
-  for MS Windows only, and allows you to restrict the search based on the
-  options you provide, e.g. 'domain' or 'localaccount'.
+Returns the user name (only) of the current login.
+
+  Admin.get_user(name, options = {})
+  Admin.get_user(uid, options = {})
+
+Returns a User object based on +name+ or +uid+. The +options+ hash is
+for MS Windows only, and allows you to restrict the search based on the
+options you provide, e.g. 'domain' or 'localaccount'.
    
-Admin.get_group(name, options = {})
-Admin.get_group(gid, options = {})
-  Returns a Group object based on +name+ or +uid+. The +options+ hash is
-  for MS Windows only, and allows you to restrict the search based on the
-  options you provide, e.g. 'domain' or 'localaccount'.
+  Admin.get_group(name, options = {})
+  Admin.get_group(gid, options = {})
 
-Admin.groups(options = {})
-  Returns an Array of Group objects.
+Returns a Group object based on +name+ or +uid+. The +options+ hash is
+for MS Windows only, and allows you to restrict the search based on the
+options you provide, e.g. 'domain' or 'localaccount'.
 
-  The +options+ hash is for MS Windows only, and allows you to restrict the
-  search based on the options you provide, e.g. 'domain' or 'localaccount'.
+  Admin.groups(options = {})
 
-Admin.users(options = {})
-  Returns an Array of User objects.
+Returns an Array of Group objects.
+
+The +options+ hash is for MS Windows only, and allows you to restrict the
+search based on the options you provide, e.g. 'domain' or 'localaccount'.
+
+  Admin.users(options = {})
+
+Returns an Array of User objects.
    
-  The +options+ hash is for MS Windows only, and allows you to restrict the
-  search based on the options you provide, e.g. 'domain' or 'localaccount'.
+The +options+ hash is for MS Windows only, and allows you to restrict the
+search based on the options you provide, e.g. 'domain' or 'localaccount'.
    
 == User class
 === User (Windows)
-  The User class has the following attributes on MS Windows systems:
+The User class has the following attributes on MS Windows systems:
 	
   * account_type
   * caption
@@ -74,7 +79,7 @@ Admin.users(options = {})
   * uid
      
 === User (Unix)
-  The User class has the following attributes on Unix systems:
+The User class has the following attributes on Unix systems:
 	
   * name
   * passwd
@@ -92,7 +97,7 @@ Admin.users(options = {})
 
 == Group Classes
 === Group (Windows)
-  The Group class has the following attributes on MS Windows systems:
+The Group class has the following attributes on MS Windows systems:
 	
   * caption
   * description
@@ -105,7 +110,7 @@ Admin.users(options = {})
   * local?
 	
 === Group (Unix)
-  The Group class has the following attributes on Unix systems:
+The Group class has the following attributes on Unix systems:
 	
   * name
   * gid
@@ -113,36 +118,36 @@ Admin.users(options = {})
   * passwd
 
 == Error Classes
-Admin::Error < StandardError
-  Raised if anything goes wrong with any of the above methods.
+  Admin::Error < StandardError
+
+Raised if anything goes wrong with any of the above methods.
 
 == Developer's Notes
 === MS Windows
-  The Windows version now uses a win32ole + WMI approach to getting
-  information.  This means that the WMI service must be running on the
-  target machine in order to work (which it is, by default).
+The Windows version now uses a win32ole + WMI approach to getting
+information.  This means that the WMI service must be running on the
+target machine in order to work (which it is, by default).
 	
 === UNIX
-  The underlying implementation is similar to core Ruby's Etc implementation.
-  But, in addition to the different interface, I use the re-entrant version
-  of the appropriate functions when available.
+The underlying implementation is similar to core Ruby's Etc implementation.
+But, in addition to the different interface, I use the re-entrant version
+of the appropriate functions when available.
 
 == Future Plans
-  Make the User and Group objects comparable.
-  Add ability to add, configure and delete users on Unix platforms.
+* Make the User and Group objects comparable.
+* Add ability to add, configure and delete users on Unix platforms.
 
 == Known Bugs
-  None that I'm aware of. If you find any, please log them on the project
-  page at:
+None that I'm aware of. If you find any, please log them on the project page at:
 
   https://github.com/djberg96/sys-admin
 
 == License
-  Apache-2.0
+Apache-2.0
 
 == Copyright
-  (C) 2005-2019, Daniel J. Berger
-  All Rights Reserved
+(C) 2005-2020, Daniel J. Berger
+All Rights Reserved
 
 == Author
-  Daniel J. Berger
+ Daniel J. Berger
